--- a/google/templates/login.html
+++ b/google/templates/login.html
@@ -1,17 +1,18 @@
+{# -*- engine:django -*- #}
 {% extends "root.html" %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<p class="login-welcome">
-    Welcome to Seolutions
-</p>
-<form action="{% url 'login-check' %}" method="POST" class="login-form">
-    {% csrf_token  %}
-    <input type=hidden name="redirect" value="{{ redirection }}" />
-    <table class="login-table">
-        {{ form }}
-    </table>
-    <input type="submit" value="Login" />
-</form>
+    <p class="login-welcome">
+        Welcome to Seolutions
+    </p>
+    <form action="{% url 'login-check' %}" method="POST" class="login-form">
+        {% csrf_token  %}
+        <input type=hidden name="redirect" value="{{ redirection }}" />
+        <table class="login-table">
+            {{ form }}
+        </table>
+        <input type="submit" value="Login" />
+    </form>
 {% endblock %}
