--- a/google/templates/reports/delete.html
+++ b/google/templates/reports/delete.html
@@ -1,13 +1,14 @@
+{# -*- engine:django -*- #}
 {% extends "root.html" %}
 {% block title %}Delete report?{% endblock %}
 
 {% block content %}
-<p>
-    <span class="delete-warning">Are you sure you want to delete this
-        report?</span>
-    <form method="POST">
-        {% csrf_token %}
-        <input type="button" value="Delete" action="submit" />
-    </form>
-</p>
+    <p>
+        <span class="delete-warning">Are you sure you want to delete this
+            report?</span>
+        <form method="POST">
+            {% csrf_token %}
+            <input type="button" value="Delete" action="submit" />
+        </form>
+    </p>
 {% endblock %}
